Organize sleep event listeners, fix mob spawning toggle